# yxz

./: .gitattributes  .gitignore  .tmp_ma_scan_top.py  404.html  AGENTS.md  CLAUDE.md  README.md  docusaurus.config.ts  gh20250228  gh20250228.pub  index.html  index.txt  note.md  package-lock.json  sitemap.xml
.claude/: launch.json  settings.json  settings.local.json
.githooks/: pre-commit
README/: index.html
agents/: .gitignore  Makefile  README.md  firefly-sandbox.yaml  nemo_workflow.yaml  pyproject.toml  trader_scan.py
agents/outputs/: scan-2026-05-29.json  scan-2026-05-31.json  scan-2026-06-04.json  scan-2026-06-07.json  scan-2026-06-11.json  scan-2026-06-18.json  scan-2026-06-20.json  scan-2026-06-23.json  scan-2026-06-28.json  scan-2026-06-29.json  scan-2026-06-30.json  scan-2026-07-01.json  scan-2026-07-02.json  scan-2026-07-03.json  scan-2026-07-09.json  scan-2026-07-14.json  scan-2026-07-19.json  scan-2026-07-20.json
agents/src/firefly/: __init__.py  cli.py  kb_loader.py  orchestrator.py  wiki_writer.py
agents/src/firefly/agents/: __init__.py  _tool_loop.py  launch_planner.py  narrator.py  orbit_designer.py  power_thermal.py  risk.py
agents/src/firefly/llm/: __init__.py  nemotron.py  router.py
agents/src/firefly/prompts/: narrator.brief.md  orbit_designer.system.md
agents/src/firefly/tools/: __init__.py  launch_library.py  space_track.py
agents/src/trader/: __init__.py  cli.py  kb_loader.py  orchestrator.py  schemas.py  wiki_writer.py
agents/src/trader/agents/: __init__.py  analyst.py  fundamentals_reader.py  narrator.py  news_scout.py  price_action.py
agents/src/trader/llm/: __init__.py  anthropic_backend.py  client.py  nemotron_backend.py  router.py  stub_backend.py
agents/src/trader/prompts/: analyst.system.md  fundamentals.system.md  narrator.brief.md  news_scout.system.md
agents/src/trader/tools/: __init__.py  alpaca_client.py  newsfeed.py  sec_edgar.py  yfinance_client.py
agents/tests/: test_smoke.py
agents/tests/trader/: conftest.py  test_news_scout.py  test_price_action.py  test_schemas.py  test_smoke.py  test_wiki_writer.py
blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  2025-02-28-longway-on-polkadot.md  atom.xml  authors.yml  index.html  rss.xml  tags.yml
markdown-page/: index.html
mcp/: index.html
my-website/: .gitignore  docusaurus.config.ts  note.md  package-lock.json  package.json
plans/: token-economy-platform.md
portfolio/: index.html
scripts/: agent-flight-search-v2.sh  agent-flight-search.sh  agent-test-flights.sh  auto-commit.ps1  dual-fix.sh  full-restart.sh  (+22 more)
(+1154 files in other folders)
